--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Oct 30 2024 03:33:27 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Nov 01 2024 01:32:52 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="671f3e84745c706f0145669d" data-wf-site="671f3e84745c706f014566a2">
 <head>
   <meta charset="utf-8">
@@ -496,16 +496,16 @@ margin: 0rem !important;
               <div class="footer_license-component">
                 <div>Certifications:</div>
                 <div class="footer_license-row">
-                  <div class="footer_license-link-wrapper"><img src="images/image-14.webp" loading="lazy" sizes="(max-width: 479px) 13vw, (max-width: 767px) 9vw, (max-width: 991px) 6vw, 4vw" srcset="images/image-14-p-500.webp 500w, images/image-14.webp 640w" alt="" class="footer_license-image">
+                  <div class="footer_license-link-wrapper"><img src="images/image-14.webp" loading="lazy" sizes="100vw" srcset="images/image-14-p-500.webp 500w, images/image-14.webp 640w" alt="" class="footer_license-image">
                     <div>Certificate of Registration of Electrical Contractor</div>
                   </div>
-                  <div class="footer_license-link-wrapper"><img src="images/image-13.webp" loading="lazy" sizes="(max-width: 479px) 13vw, (max-width: 767px) 9vw, (max-width: 991px) 6vw, 4vw" srcset="images/image-13-p-500.webp 500w, images/image-13-p-800.webp 800w, images/image-13.webp 1200w" alt="" class="footer_license-image">
+                  <div class="footer_license-link-wrapper"><img src="images/image-13.webp" loading="lazy" sizes="100vw" srcset="images/image-13-p-500.webp 500w, images/image-13-p-800.webp 800w, images/image-13.webp 1200w" alt="" class="footer_license-image">
                     <div>Registration as a Chemical Waste Producer</div>
                   </div>
                   <div class="footer_license-link-wrapper"><img src="images/Hong_Kong_Security_Bureau.webp" loading="lazy" alt="" class="footer_license-image">
                     <div>Security Company License</div>
                   </div>
-                  <div class="footer_license-link-wrapper"><img src="images/New-Project-4.webp" loading="lazy" sizes="(max-width: 479px) 29vw, (max-width: 767px) 19vw, (max-width: 991px) 13vw, 8vw" srcset="images/New-Project-4-p-500.webp 500w, images/New-Project-4-p-800.webp 800w, images/New-Project-4-p-1080.webp 1080w, images/New-Project-4.webp 1120w" alt="" class="footer_license-image">
+                  <div class="footer_license-link-wrapper"><img src="images/New-Project-4.webp" loading="lazy" sizes="100vw" srcset="images/New-Project-4-p-500.webp 500w, images/New-Project-4-p-800.webp 800w, images/New-Project-4-p-1080.webp 1080w, images/New-Project-4.webp 1120w" alt="" class="footer_license-image">
                     <div>Good MPF Employer</div>
                   </div>
                   <div class="footer_license-link-wrapper"><img src="images/QualitySysCert_ISO9001_col-1-removebg-preview-1.webp" loading="lazy" alt="" class="footer_license-image">
@@ -547,5 +547,14 @@ margin: 0rem !important;
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=671f3e84745c706f014566a2" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/wintech-1b0d03-7fde6d60e88cfb09b3740ff5.js" type="text/javascript"></script>
+  <script>
+  document.addEventListener("DOMContentLoaded", function() {
+    // Check if the current page URL path matches /zh-hk/about
+    if (window.location.pathname === "/zh-hk/about") {
+      // Redirect to /zh/about
+      window.location.href = "/zh/about";
+    }
+  });
+</script>
 </body>
 </html>
