--- a/zh-hk/about.html
+++ b/zh-hk/about.html
@@ -1,29 +1,22 @@
 <!DOCTYPE html><!--  Last Published: Fri Nov 01 2024 01:32:52 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="671f3e84745c706f01456695" data-wf-site="671f3e84745c706f014566a2">
+<html data-wf-page="67242d1377bc6d78c30ad8d2" data-wf-site="671f3e84745c706f014566a2">
 <head>
   <meta charset="utf-8">
-  <title>Not Found</title>
-  <meta content="Not Found" property="og:title">
-  <meta content="Not Found" property="twitter:title">
+  <title>關於 我們</title>
+  <meta content="關於 我們" property="og:title">
+  <meta content="關於 我們" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="css/normalize.css" rel="stylesheet" type="text/css">
-  <link href="css/components.css" rel="stylesheet" type="text/css">
-  <link href="css/wintech-1b0d03-7fde6d60e88cfb09b3740ff5.css" rel="stylesheet" type="text/css">
+  <link href="../css/normalize.css" rel="stylesheet" type="text/css">
+  <link href="../css/components.css" rel="stylesheet" type="text/css">
+  <link href="../css/wintech-1b0d03-7fde6d60e88cfb09b3740ff5.css" rel="stylesheet" type="text/css">
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.png" rel="apple-touch-icon">
+  <link href="../images/favicon.png" rel="shortcut icon" type="image/x-icon">
+  <link href="../images/webclip.png" rel="apple-touch-icon">
   <meta name="google-site-verification" content="AZdG0b9UsEJo-3OFhc_NBXNuXpiVdxkG9Y_vshAdiig">
 </head>
 <body>
-  <div class="utility-page_component">
-    <div class="utility-page_wrapper"><img src="https://d3e54v103j8qbb.cloudfront.net/static/page-not-found.211a85e40c.svg" alt="" class="utility-page_image">
-      <h3>Page Not Found</h3>
-      <div>The page you are looking for doesn&#x27;t exist or has been moved</div>
-      <a href="index.html" class="button w-button">Go Home</a>
-    </div>
-  </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=671f3e84745c706f014566a2" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="js/wintech-1b0d03-7fde6d60e88cfb09b3740ff5.js" type="text/javascript"></script>
+  <script src="../js/wintech-1b0d03-7fde6d60e88cfb09b3740ff5.js" type="text/javascript"></script>
   <script>
   document.addEventListener("DOMContentLoaded", function() {
     // Check if the current page URL path matches /zh-hk/about
