--- a/zh.html
+++ b/zh.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html><!--  Last Published: Wed Oct 30 2024 03:33:27 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Nov 01 2024 01:32:52 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="672191a739776589d3db628d" data-wf-site="671f3e84745c706f014566a2">
 <head>
   <meta charset="utf-8">
-  <title>Home ZH</title>
+  <title>360º Total Solutions</title>
   <meta content="Established in 1998, Wintech pioneers in infrastructure safety, reliability, and cutting-edge engineering solutions." name="description">
-  <meta content="Home ZH" property="og:title">
+  <meta content="360º Total Solutions" property="og:title">
   <meta content="Established in 1998, Wintech pioneers in infrastructure safety, reliability, and cutting-edge engineering solutions." property="og:description">
-  <meta content="Home ZH" property="twitter:title">
+  <meta content="360º Total Solutions" property="twitter:title">
   <meta content="Established in 1998, Wintech pioneers in infrastructure safety, reliability, and cutting-edge engineering solutions." property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
@@ -820,5 +820,14 @@ margin: 0rem !important;
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=671f3e84745c706f014566a2" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/wintech-1b0d03-7fde6d60e88cfb09b3740ff5.js" type="text/javascript"></script>
+  <script>
+  document.addEventListener("DOMContentLoaded", function() {
+    // Check if the current page URL path matches /zh-hk/about
+    if (window.location.pathname === "/zh-hk/about") {
+      // Redirect to /zh/about
+      window.location.href = "/zh/about";
+    }
+  });
+</script>
 </body>
 </html>
