--- a/zh/about.html
+++ b/zh/about.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html><!--  Last Published: Wed Oct 30 2024 03:33:27 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Nov 01 2024 01:32:52 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="67219a1b0061f0485c86a2e3" data-wf-site="671f3e84745c706f014566a2">
 <head>
   <meta charset="utf-8">
-  <title>About</title>
+  <title>關於 我們</title>
   <meta content="Wintech is a leading provider of infrastructure safety, reliability, and engineering solutions since 1998. Learn more about their mission, belief, and services on their about page." name="description">
-  <meta content="About" property="og:title">
+  <meta content="關於 我們" property="og:title">
   <meta content="Wintech is a leading provider of infrastructure safety, reliability, and engineering solutions since 1998. Learn more about their mission, belief, and services on their about page." property="og:description">
-  <meta content="About" property="twitter:title">
+  <meta content="關於 我們" property="twitter:title">
   <meta content="Wintech is a leading provider of infrastructure safety, reliability, and engineering solutions since 1998. Learn more about their mission, belief, and services on their about page." property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
@@ -413,5 +413,14 @@ margin: 0rem !important;
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=671f3e84745c706f014566a2" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="../js/wintech-1b0d03-7fde6d60e88cfb09b3740ff5.js" type="text/javascript"></script>
+  <script>
+  document.addEventListener("DOMContentLoaded", function() {
+    // Check if the current page URL path matches /zh-hk/about
+    if (window.location.pathname === "/zh-hk/about") {
+      // Redirect to /zh/about
+      window.location.href = "/zh/about";
+    }
+  });
+</script>
 </body>
 </html>
