--- a/zh/blogs/the-most-comprehensive-guide-to-app-development-costs-in-2024-how-much-does-it-cost-to-write-an-app.html
+++ b/zh/blogs/the-most-comprehensive-guide-to-app-development-costs-in-2024-how-much-does-it-cost-to-write-an-app.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html><!--  Last Published: Wed Oct 30 2024 03:33:27 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Nov 01 2024 01:32:52 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6721a07139776589d3e723c8" data-wf-site="671f3e84745c706f014566a2">
 <head>
   <meta charset="utf-8">
-  <title>The Most Comprehensive Guide to App Development Costs in 2024: How Much Does It Cost to Write an App?</title>
-  <meta content="The Most Comprehensive Guide to App Development Costs in 2024: How Much Does It Cost to Write an App?" property="og:title">
-  <meta content="The Most Comprehensive Guide to App Development Costs in 2024: How Much Does It Cost to Write an App?" property="twitter:title">
+  <title>2024年最全面的寫Apps成本指南：寫一個Apps需要多少錢？</title>
+  <meta content="2024年最全面的寫Apps成本指南：寫一個Apps需要多少錢？" property="og:title">
+  <meta content="2024年最全面的寫Apps成本指南：寫一個Apps需要多少錢？" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="../../css/normalize.css" rel="stylesheet" type="text/css">
   <link href="../../css/components.css" rel="stylesheet" type="text/css">
@@ -474,5 +474,14 @@ margin: 0rem !important;
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=671f3e84745c706f014566a2" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="../../js/wintech-1b0d03-7fde6d60e88cfb09b3740ff5.js" type="text/javascript"></script>
+  <script>
+  document.addEventListener("DOMContentLoaded", function() {
+    // Check if the current page URL path matches /zh-hk/about
+    if (window.location.pathname === "/zh-hk/about") {
+      // Redirect to /zh/about
+      window.location.href = "/zh/about";
+    }
+  });
+</script>
 </body>
 </html>
