--- a/zh/services/iot-energy-efficiency-services.html
+++ b/zh/services/iot-energy-efficiency-services.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html><!--  Last Published: Wed Oct 30 2024 03:33:27 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Nov 01 2024 01:32:52 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="67219f5799ce3ce15b222149" data-wf-site="671f3e84745c706f014566a2">
 <head>
   <meta charset="utf-8">
-  <title>IoT &amp; Energy Efficiency Services</title>
-  <meta content="IoT &amp; Energy Efficiency Services" property="og:title">
-  <meta content="IoT &amp; Energy Efficiency Services" property="twitter:title">
+  <title>物聯網和能源效益服務</title>
+  <meta content="物聯網和能源效益服務" property="og:title">
+  <meta content="物聯網和能源效益服務" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="../../css/normalize.css" rel="stylesheet" type="text/css">
   <link href="../../css/components.css" rel="stylesheet" type="text/css">
@@ -352,5 +352,14 @@ margin: 0rem !important;
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=671f3e84745c706f014566a2" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="../../js/wintech-1b0d03-7fde6d60e88cfb09b3740ff5.js" type="text/javascript"></script>
+  <script>
+  document.addEventListener("DOMContentLoaded", function() {
+    // Check if the current page URL path matches /zh-hk/about
+    if (window.location.pathname === "/zh-hk/about") {
+      // Redirect to /zh/about
+      window.location.href = "/zh/about";
+    }
+  });
+</script>
 </body>
 </html>
